fix: react ui Timeline tree spine vertical gap
This also updates S display mode to show only the tree, not the timeline bars or duration.

--- a/pdl-live-react/src/view/masonry/Duration.css
+++ b/pdl-live-react/src/view/masonry/Duration.css
@@ -1,4 +1,4 @@
 .pdl-duration {
-  font-size: 0.75em;
+  font-size: 0.875em;
   cursor: default;
 }
